# transaero

./: CMakeLists.txt  lexeme.cpp  lexeme.h  lexical_analyzer.cpp  lexical_analyzer.h  main.cpp
src/: code.txt  reserved_words.txt  tid.h
src/checker/: checker.cpp  checker.h
src/error/: error.cpp  error.h
src/function_table/: function_table.cpp  function_table.h
src/lexeme/: lexeme.cpp  lexeme.h
src/lexical_analyzer/: lexical_analyzer.cpp  lexical_analyzer.h
src/poliz/: poliz.cpp  poliz.h
src/semstack/: semstack.cpp  semstack.h
src/syntax_analyzer/: syntax_analyzer.cpp  syntax_analyzer.h
src/tid/: tid.cpp  tid.h
src/trie/: Trie.cpp  Trie.h
